--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-a<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -234,6 +234,7 @@ a<!DOCTYPE html>
     <link rel="stylesheet" href="css/calendar.shift-in-perception.css">
     <link rel="stylesheet" href="css/calendar.silicon-valley.css">
     <link rel="stylesheet" href="css/calendar.sky-eagle.css">
+    <link rel="stylesheet" href="css/calendar.skylight-window.css">
     <link rel="stylesheet" href="css/calendar.solar-flare.css">
     <link rel="stylesheet" href="css/calendar.spring-meadow.css">
     <link rel="stylesheet" href="css/calendar.statue-of-liberty.css">
@@ -710,6 +711,7 @@ a<!DOCTYPE html>
                 <option value="shift-in-perception">Shift in Perception</option>
                 <option value="silicon-valley">Silicon Valley</option>
                 <option value="sky-eagle">Sky Eagle</option>
+                <option value="skylight-window">Skylight Window</option>
                 <option value="solar-flare">Solar Flare</option>
                 <option value="spring-meadow">Spring Meadow</option>
                 <option value="statue-of-liberty">Statue of Liberty</option>
