--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <link rel="stylesheet" href="css/calendar.doterra-new.css">
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
+    <link rel="stylesheet" href="css/calendar.dream-adventure.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
     <link rel="stylesheet" href="css/calendar.emperor-penguin.css">
     <link rel="stylesheet" href="css/calendar.essential-oils.css">
@@ -574,6 +575,7 @@
                 <option value="doterra-new">doTERRA New</option>
                 <option value="dragon-flame">Dragon Flame</option>
                 <option value="dragonfly">Dragonfly</option>
+                <option value="dream-adventure">Dream Adventure</option>
                 <option value="emerald-stream">Emerald Stream</option>
                 <option value="emperor-penguin">Emperor Penguin</option>
                 <option value="essential-oils">Essential Oils</option>
