--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <link rel="stylesheet" href="css/calendar.doterra-gold.css">
     <link rel="stylesheet" href="css/calendar.doterra-green.css">
     <link rel="stylesheet" href="css/calendar.doterra-new.css">
+    <link rel="stylesheet" href="css/calendar.doterra-power.css">
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
     <link rel="stylesheet" href="css/calendar.dream-adventure.css">
@@ -573,6 +574,7 @@
                 <option value="doterra-gold">doTERRA Gold</option>
                 <option value="doterra-green">doTERRA Green</option>
                 <option value="doterra-new">doTERRA New</option>
+                <option value="doterra-power">doTERRA Power</option>
                 <option value="dragon-flame">Dragon Flame</option>
                 <option value="dragonfly">Dragonfly</option>
                 <option value="dream-adventure">Dream Adventure</option>
