--- a/index.html
+++ b/index.html
@@ -569,12 +569,12 @@
                 <option value="diamond-planet">Diamond Planet</option>
                 <option value="divi-divi-trees">Divi-divi Trees</option>
                 <option value="distant-skies">Distant Skies</option>
-                <option value="doterra-black">doTERRA Black</option>
-                <option value="doterra-colors">doTERRA Colors</option>
-                <option value="doterra-gold">doTERRA Gold</option>
-                <option value="doterra-green">doTERRA Green</option>
-                <option value="doterra-new">doTERRA New</option>
-                <option value="doterra-power">doTERRA Power</option>
+                <option value="doterra-black">DōTERRA Black</option>
+                <option value="doterra-colors">DōTERRA Colors</option>
+                <option value="doterra-gold">DōTERRA Gold</option>
+                <option value="doterra-green">DōTERRA Green</option>
+                <option value="doterra-new">DōTERRA New</option>
+                <option value="doterra-power">DōTERRA Power</option>
                 <option value="dragon-flame">Dragon Flame</option>
                 <option value="dragonfly">Dragonfly</option>
                 <option value="dream-adventure">Dream Adventure</option>
