--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <link rel="stylesheet" href="css/calendar.crystal-stream.css">
     <link rel="stylesheet" href="css/calendar.cyber-pulse.css">
     <link rel="stylesheet" href="css/calendar.dark-mode.css">
+    <link rel="stylesheet" href="css/calendar.dark-star.css">
     <link rel="stylesheet" href="css/calendar.dartagnans-rapier.css">
     <link rel="stylesheet" href="css/calendar.daruma-doll.css">
     <link rel="stylesheet" href="css/calendar.deep-forest.css">
@@ -563,6 +564,7 @@
                 <option value="crystal-stream">Crystal Stream</option>
                 <option value="cyber-pulse">Cyber Pulse</option>
                 <option value="dark-mode">Dark Mode</option>
+                <option value="dark-star">Dark Star</option>
                 <option value="dartagnans-rapier">D'Artagnan's Rapier</option>
                 <option value="daruma-doll">Daruma Doll</option>
                 <option value="deep-forest">Deep Forest</option>
