--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <link rel="stylesheet" href="css/calendar.deep-ocean.css">
     <link rel="stylesheet" href="css/calendar.desert-mirage.css">
     <link rel="stylesheet" href="css/calendar.diamond-planet.css">
+    <link rel="stylesheet" href="css/calendar.digital-excellence.css">
     <link rel="stylesheet" href="css/calendar.distant-skies.css">
     <link rel="stylesheet" href="css/calendar.divi-divi-trees.css">
     <link rel="stylesheet" href="css/calendar.doterra-black.css">
@@ -573,6 +574,7 @@
                 <option value="deep-ocean">Deep Ocean</option>
                 <option value="desert-mirage">Desert Mirage</option>
                 <option value="diamond-planet">Diamond Planet</option>
+                <option value="digital-excellence">Digital Excellence</option>
                 <option value="divi-divi-trees">Divi-divi Trees</option>
                 <option value="distant-skies">Distant Skies</option>
                 <option value="doterra-black">DōTERRA Black</option>
