--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <link rel="stylesheet" href="css/calendar.black-hawk.css">
     <link rel="stylesheet" href="css/calendar.black-hole.css">
     <link rel="stylesheet" href="css/calendar.black-orange.css">
+    <link rel="stylesheet" href="css/calendar.black-style.css">
     <link rel="stylesheet" href="css/calendar.black-velvet.css">
     <link rel="stylesheet" href="css/calendar.black-violet.css">
     <link rel="stylesheet" href="css/calendar.blue-bird.css">
@@ -533,6 +534,7 @@
                 <option value="black-hawk">Black Hawk</option>
                 <option value="black-hole">Black Hole</option>
                 <option value="black-orange">Black Orange</option>
+                <option value="black-style">Black Style</option>
                 <option value="black-velvet">Black Velvet</option>
                 <option value="black-violet">Black Violet</option>
                 <option value="blue-bird">Blue Bird</option>
