--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <link rel="stylesheet" href="css/calendar.caribbean-sea.css">
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
     <link rel="stylesheet" href="css/calendar.clean-energy.css">
+    <link rel="stylesheet" href="css/calendar.coastal-pacific.css">
     <link rel="stylesheet" href="css/calendar.collaboration-idea.css">
     <link rel="stylesheet" href="css/calendar.competitive-advantage.css">
     <link rel="stylesheet" href="css/calendar.continuous-growth.css">
@@ -557,6 +558,7 @@
                 <option value="cherry-garden">Cherry Garden</option>
                 <option value="cinnamon-street">Cinnamon Street</option>
                 <option value="clean-energy">Clean Energy</option>
+                <option value="coastal-pacific">Coastal Pacific</option>
                 <option value="collaboration-idea">Collaboration Idea</option>
                 <option value="competitive-advantage">Competitive Advantage</option>
                 <option value="continuous-growth">Continuous Growth</option>
