--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
     <link rel="stylesheet" href="css/calendar.wild-rose.css">
     <link rel="stylesheet" href="css/calendar.wild-wonders.css">
     <link rel="stylesheet" href="css/calendar.winter-wonderland.css">
+    <link rel="stylesheet" href="css/calendar.wonderful-experience.css">
 
     <!-- Custom Styles -->
     <style>
@@ -761,6 +762,7 @@
                 <option value="wild-rose">Wild Rose</option>
                 <option value="wild-wonders">Wild Wonders</option>
                 <option value="winter-wonderland">Winter Wonderland</option>
+                <option value="wonderful-experience">Wonderful Experience</option>
             </select>
         </div>
 
