--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" href="css/calendar.bermuda-triangle.css">
     <link rel="stylesheet" href="css/calendar.best-practice.css">
     <link rel="stylesheet" href="css/calendar.best-response.css">
+    <link rel="stylesheet" href="css/calendar.big-dream.css">
     <link rel="stylesheet" href="css/calendar.big-fashion.css">
     <link rel="stylesheet" href="css/calendar.black-bird.css">
     <link rel="stylesheet" href="css/calendar.black-coffee.css">
@@ -531,6 +532,7 @@
                 <option value="bermuda-triangle">Bermuda Triangle</option>
                 <option value="best-practice">Best Practice</option>
                 <option value="best-response">Best Response</option>
+                <option value="big-dream">Big Dream</option>
                 <option value="big-fashion">Big Fashion</option>
                 <option value="black-bird">Black Bird</option>
                 <option value="black-coffee">Black Coffee</option>
