--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <link rel="stylesheet" href="css/calendar.blue-whale.css">
     <link rel="stylesheet" href="css/calendar.blue-white.css">
     <link rel="stylesheet" href="css/calendar.breaking-point.css">
+    <link rel="stylesheet" href="css/calendar.breathtaking-view.css">
     <link rel="stylesheet" href="css/calendar.bright-line.css">
     <link rel="stylesheet" href="css/calendar.bronze-horseman.css">
     <link rel="stylesheet" href="css/calendar.cacao-plantation.css">
@@ -552,6 +553,7 @@
                 <option value="blue-whale">Blue Whale</option>
                 <option value="blue-white">Blue & White</option>
                 <option value="breaking-point">Breaking Point</option>
+                <option value="breathtaking-view">Breathtaking View</option>
                 <option value="bright-line">Bright Line</option>
                 <option value="bronze-horseman">Bronze Horseman</option>
                 <option value="cacao-plantation">Cacao Plantation</option>
