--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <link rel="stylesheet" href="css/calendar.deep-forest.css">
     <link rel="stylesheet" href="css/calendar.deep-ocean.css">
     <link rel="stylesheet" href="css/calendar.desert-mirage.css">
+    <link rel="stylesheet" href="css/calendar.developers-zone.css">
     <link rel="stylesheet" href="css/calendar.diamond-planet.css">
     <link rel="stylesheet" href="css/calendar.digital-excellence.css">
     <link rel="stylesheet" href="css/calendar.distant-skies.css">
@@ -586,6 +587,7 @@
                 <option value="deep-forest">Deep Forest</option>
                 <option value="deep-ocean">Deep Ocean</option>
                 <option value="desert-mirage">Desert Mirage</option>
+                <option value="developers-zone">Developers Zone</option>
                 <option value="diamond-planet">Diamond Planet</option>
                 <option value="digital-excellence">Digital Excellence</option>
                 <option value="divi-divi-trees">Divi-divi Trees</option>
