--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
     <link rel="stylesheet" href="css/calendar.clean-energy.css">
     <link rel="stylesheet" href="css/calendar.coastal-pacific.css">
+    <link rel="stylesheet" href="css/calendar.coffee-for-leaders.css">
     <link rel="stylesheet" href="css/calendar.collaboration-idea.css">
     <link rel="stylesheet" href="css/calendar.competitive-advantage.css">
     <link rel="stylesheet" href="css/calendar.continuous-growth.css">
@@ -567,6 +568,7 @@
                 <option value="cinnamon-street">Cinnamon Street</option>
                 <option value="clean-energy">Clean Energy</option>
                 <option value="coastal-pacific">Coastal Pacific</option>
+                <option value="coffee-for-leaders">Coffee for Leaders</option>
                 <option value="collaboration-idea">Collaboration Idea</option>
                 <option value="competitive-advantage">Competitive Advantage</option>
                 <option value="continuous-growth">Continuous Growth</option>
