--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <link rel="stylesheet" href="css/calendar.daruma-doll.css">
     <link rel="stylesheet" href="css/calendar.deep-forest.css">
     <link rel="stylesheet" href="css/calendar.deep-ocean.css">
+    <link rel="stylesheet" href="css/calendar.deep-space.css">
     <link rel="stylesheet" href="css/calendar.desert-mirage.css">
     <link rel="stylesheet" href="css/calendar.developers-zone.css">
     <link rel="stylesheet" href="css/calendar.diamond-planet.css">
@@ -591,6 +592,7 @@
                 <option value="daruma-doll">Daruma Doll</option>
                 <option value="deep-forest">Deep Forest</option>
                 <option value="deep-ocean">Deep Ocean</option>
+                <option value="deep-space">Deep Space</option>
                 <option value="desert-mirage">Desert Mirage</option>
                 <option value="developers-zone">Developers Zone</option>
                 <option value="diamond-planet">Diamond Planet</option>
