--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
     <link rel="stylesheet" href="css/calendar.luxury-design.css">
     <link rel="stylesheet" href="css/calendar.macaroni-penguin.css">
     <link rel="stylesheet" href="css/calendar.magellanic-penguin.css">
+    <link rel="stylesheet" href="css/calendar.magic-fly.css">
     <link rel="stylesheet" href="css/calendar.mammoth-tusk.css">
     <link rel="stylesheet" href="css/calendar.maple-leaf-fall.css">
     <link rel="stylesheet" href="css/calendar.maple-syrup.css">
@@ -681,6 +682,7 @@
                 <option value="luxury-design">Luxury Design</option>
                 <option value="macaroni-penguin">Macaroni Penguin</option>
                 <option value="magellanic-penguin">Magellanic Penguin</option>
+                <option value="magic-fly">Magic Fly</option>
                 <option value="mammoth-tusk">Mammoth Tusk</option>
                 <option value="maple-leaf-fall">Maple Leaf Fall</option>
                 <option value="maple-syrup">Maple Syrup</option>
