--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
     <link rel="stylesheet" href="css/calendar.wild-wonders.css">
     <link rel="stylesheet" href="css/calendar.winter-wonderland.css">
     <link rel="stylesheet" href="css/calendar.wonderful-experience.css">
+    <link rel="stylesheet" href="css/calendar.zodiac-constellations.css">
 
     <!-- Custom Styles -->
     <style>
@@ -783,6 +784,7 @@
                 <option value="wild-wonders">Wild Wonders</option>
                 <option value="winter-wonderland">Winter Wonderland</option>
                 <option value="wonderful-experience">Wonderful Experience</option>
+                <option value="zodiac-constellations">Zodiac Constellations</option>
             </select>
         </div>
 
