--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
     <link rel="stylesheet" href="css/calendar.on-the-island.css">
     <link rel="stylesheet" href="css/calendar.orange-country.css">
     <link rel="stylesheet" href="css/calendar.orion-constellation.css">
+    <link rel="stylesheet" href="css/calendar.overnight-train.css">
     <link rel="stylesheet" href="css/calendar.pink-lake.css">
     <link rel="stylesheet" href="css/calendar.pirate-ship.css">
     <link rel="stylesheet" href="css/calendar.polar-bear.css">
@@ -717,6 +718,7 @@
                 <option value="on-the-island">On the Island</option>
                 <option value="orange-country">Orange Country</option>
                 <option value="orion-constellation">Orion Constellation</option>
+                <option value="overnight-train">Overnight Train</option>
                 <option value="pink-lake">Pink Lake</option>
                 <option value="pirate-ship">Pirate Ship</option>
                 <option value="polar-bear">Polar Bear</option>
