--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     <link rel="stylesheet" href="css/calendar.galactic-glow.css">
     <link rel="stylesheet" href="css/calendar.genghis-khan-arrow.css">
     <link rel="stylesheet" href="css/calendar.giant-petrel.css">
+    <link rel="stylesheet" href="css/calendar.glorious-day.css">
     <link rel="stylesheet" href="css/calendar.golden-century.css">
     <link rel="stylesheet" href="css/calendar.golden-coast.css">
     <link rel="stylesheet" href="css/calendar.golden-eagle.css">
@@ -635,6 +636,7 @@
                 <option value="galactic-glow">Galactic Glow</option>
                 <option value="genghis-khan-arrow">Genghis Khan's Arrow</option>
                 <option value="giant-petrel">Giant Petrel</option>
+                <option value="glorious-day">Glorious Day</option>
                 <option value="golden-century">Golden Century</option>
                 <option value="golden-coast">Gold Coast</option>
                 <option value="golden-eagle">Golden Eagle</option>
