--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <link rel="stylesheet" href="css/calendar.black-violet.css">
     <link rel="stylesheet" href="css/calendar.blue-bird.css">
     <link rel="stylesheet" href="css/calendar.blue-ice.css">
+    <link rel="stylesheet" href="css/calendar.blue-mountains.css">
     <link rel="stylesheet" href="css/calendar.blue-planet.css">
     <link rel="stylesheet" href="css/calendar.blue-stars.css">
     <link rel="stylesheet" href="css/calendar.blue-whale.css">
@@ -557,6 +558,7 @@
                 <option value="black-violet">Black Violet</option>
                 <option value="blue-bird">Blue Bird</option>
                 <option value="blue-ice">Blue Ice</option>
+                <option value="blue-mountains">Blue Mountains</option>
                 <option value="blue-planet">Blue Planet</option>
                 <option value="blue-stars">Blue Stars</option>
                 <option value="blue-whale">Blue Whale</option>
