--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
     <link rel="stylesheet" href="css/calendar.tactical-command.css">
     <link rel="stylesheet" href="css/calendar.technological-might.css">
     <link rel="stylesheet" href="css/calendar.the-dead-sea.css">
+    <link rel="stylesheet" href="css/calendar.the-great-silk-road.css">
     <link rel="stylesheet" href="css/calendar.the-highest-level.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
     <link rel="stylesheet" href="css/calendar.time-complexity.css">
@@ -774,6 +775,7 @@
                 <option value="tactical-command">Tactical Command</option>
                 <option value="technological-might">Technological Might</option>
                 <option value="the-dead-sea">The Dead Sea</option>
+                <option value="the-great-silk-road">The Great Silk Road</option>
                 <option value="the-highest-level">The Highest Level</option>
                 <option value="the-last-mohican">The Last Mohican</option>
                 <option value="samurai-path">The Samurai's Path</option>
