--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
     <link rel="stylesheet" href="css/calendar.next-step.css">
     <link rel="stylesheet" href="css/calendar.niagara-falls.css">
     <link rel="stylesheet" href="css/calendar.night-dragon.css">
+    <link rel="stylesheet" href="css/calendar.night-sky.css">
     <link rel="stylesheet" href="css/calendar.north-pole.css">
     <link rel="stylesheet" href="css/calendar.northern-nights.css">
     <link rel="stylesheet" href="css/calendar.ocean-surf.css">
@@ -713,6 +714,7 @@
                 <option value="next-step">Next Step</option>
                 <option value="niagara-falls">Niagara Falls</option>
                 <option value="night-dragon">Night Dragon</option>
+                <option value="night-sky">Night Sky</option>
                 <option value="north-pole">North Pole</option>
                 <option value="northern-nights">Northern Nights</option>
                 <option value="ocean-surf">Ocean Surf</option>
