--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <link rel="stylesheet" href="css/calendar.black-velvet.css">
     <link rel="stylesheet" href="css/calendar.black-violet.css">
     <link rel="stylesheet" href="css/calendar.blue-bird.css">
+    <link rel="stylesheet" href="css/calendar.blue-frost.css">
     <link rel="stylesheet" href="css/calendar.blue-ice.css">
     <link rel="stylesheet" href="css/calendar.blue-mountains.css">
     <link rel="stylesheet" href="css/calendar.blue-planet.css">
@@ -559,6 +560,7 @@
                 <option value="black-velvet">Black Velvet</option>
                 <option value="black-violet">Black Violet</option>
                 <option value="blue-bird">Blue Bird</option>
+                <option value="blue-frost">Blue Frost</option>
                 <option value="blue-ice">Blue Ice</option>
                 <option value="blue-mountains">Blue Mountains</option>
                 <option value="blue-planet">Blue Planet</option>
