--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <link rel="stylesheet" href="css/calendar.blue-frost.css">
     <link rel="stylesheet" href="css/calendar.blue-ice.css">
     <link rel="stylesheet" href="css/calendar.blue-mountains.css">
+    <link rel="stylesheet" href="css/calendar.blue-ocean.css">
     <link rel="stylesheet" href="css/calendar.blue-planet.css">
     <link rel="stylesheet" href="css/calendar.blue-stars.css">
     <link rel="stylesheet" href="css/calendar.blue-whale.css">
@@ -563,6 +564,7 @@
                 <option value="blue-frost">Blue Frost</option>
                 <option value="blue-ice">Blue Ice</option>
                 <option value="blue-mountains">Blue Mountains</option>
+                <option value="blue-ocean">Blue Ocean</option>
                 <option value="blue-planet">Blue Planet</option>
                 <option value="blue-stars">Blue Stars</option>
                 <option value="blue-whale">Blue Whale</option>
