--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
     <link rel="stylesheet" href="css/calendar.velvety-dark.css">
     <link rel="stylesheet" href="css/calendar.viking-helmet.css">
     <link rel="stylesheet" href="css/calendar.viktoria-falls.css">
+    <link rel="stylesheet" href="css/calendar.wasted-love.css">
     <link rel="stylesheet" href="css/calendar.weekend-downtime.css">
     <link rel="stylesheet" href="css/calendar.white-shark.css">
     <link rel="stylesheet" href="css/calendar.wild-rose.css">
@@ -792,6 +793,7 @@
                 <option value="velvety-dark">Velvety Dark</option>
                 <option value="viking-helmet">Viking Helmet</option>
                 <option value="viktoria-falls">Viktoria Falls</option>
+                <option value="wasted-love">Wasted Love</option>
                 <option value="weekend-downtime">Weekend Downtime</option>
                 <option value="white-shark">White Shark</option>
                 <option value="wild-rose">Wild Rose</option>
