--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/calendar.core.css">
     <link rel="stylesheet" href="css/calendar.responsive.css">
     <link rel="stylesheet" href="css/calendar.abandoned-castle.css">
+    <link rel="stylesheet" href="css/calendar.a-brilliant-mind.css">
     <link rel="stylesheet" href="css/calendar.action-time.css">
     <link rel="stylesheet" href="css/calendar.adelaide-skyline.css">
     <link rel="stylesheet" href="css/calendar.adriatic-sea.css">
@@ -528,6 +529,7 @@
                 Events</button>
             <select id="theme-switcher" aria-label="Theme Switcher">
                 <option value="abandoned-castle">Abandoned Castle</option>
+                <option value="a-brilliant-mind">A Brilliant Mind</option>
                 <option value="action-time">Action Time</option>
                 <option value="adelaide-skyline">Adelaide's Skyline</option>
                 <option value="adriatic-sea">Adriatic Sea</option>
