--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
     <link rel="stylesheet" href="css/calendar.ocean-vortex.css">
     <link rel="stylesheet" href="css/calendar.okinawa-breeze.css">
     <link rel="stylesheet" href="css/calendar.one-step-ahead.css">
+    <link rel="stylesheet" href="css/calendar.one-way-ticket.css">
     <link rel="stylesheet" href="css/calendar.on-the-island.css">
     <link rel="stylesheet" href="css/calendar.orange-country.css">
     <link rel="stylesheet" href="css/calendar.orion-constellation.css">
@@ -729,6 +730,7 @@
                 <option value="ocean-vortex">Ocean Vortex</option>
                 <option value="okinawa-breeze">Okinawa Breeze</option>
                 <option value="one-step-ahead">One Step Ahead</option>
+                <option value="one-way-ticket">One Way Ticket</option>
                 <option value="on-the-island">On the Island</option>
                 <option value="orange-country">Orange Country</option>
                 <option value="orion-constellation">Orion Constellation</option>
