--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
     <link rel="stylesheet" href="css/calendar.strategic-advantage.css">
     <link rel="stylesheet" href="css/calendar.strategic-planning.css">
+    <link rel="stylesheet" href="css/calendar.strawberry-moon.css">
     <link rel="stylesheet" href="css/calendar.success-key.css">
     <link rel="stylesheet" href="css/calendar.success-motivation.css">
     <link rel="stylesheet" href="css/calendar.sword-of-fate.css">
@@ -779,6 +780,7 @@
                 <option value="stockholm-roofs">Stockholm Roofs</option>
                 <option value="strategic-advantage">Strategic Advantage</option>
                 <option value="strategic-planning">Strategic Planning</option>
+                <option value="strawberry-moon">Strawberry Moon</option>
                 <option value="success-key">Success Key</option>
                 <option value="success-motivation">Success Motivation</option>
                 <option value="sword-of-fate">Sword of Fate</option>
