--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
     <link rel="stylesheet" href="css/calendar.the-great-silk-road.css">
     <link rel="stylesheet" href="css/calendar.the-highest-level.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
+    <link rel="stylesheet" href="css/calendar.the-perfect-blend.css">
     <link rel="stylesheet" href="css/calendar.time-complexity.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
@@ -791,6 +792,7 @@
                 <option value="the-great-silk-road">The Great Silk Road</option>
                 <option value="the-highest-level">The Highest Level</option>
                 <option value="the-last-mohican">The Last Mohican</option>
+                <option value="the-perfect-blend">The Perfect Blend</option>
                 <option value="samurai-path">The Samurai's Path</option>
                 <option value="time-complexity">Time Complexity</option>
                 <option value="time-machine">Time Machine</option>
