--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <link rel="stylesheet" href="css/calendar.centaurus-constellation.css">
     <link rel="stylesheet" href="css/calendar.cherry-garden.css">
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
+    <link rel="stylesheet" href="css/calendar.city-of-night.css">
     <link rel="stylesheet" href="css/calendar.clean-energy.css">
     <link rel="stylesheet" href="css/calendar.coastal-pacific.css">
     <link rel="stylesheet" href="css/calendar.coffee-for-leaders.css">
@@ -589,6 +590,7 @@
                 <option value="centaurus-constellation">Centaurus Constellation</option>
                 <option value="cherry-garden">Cherry Garden</option>
                 <option value="cinnamon-street">Cinnamon Street</option>
+                <option value="city-of-night">City of Night</option>
                 <option value="clean-energy">Clean Energy</option>
                 <option value="coastal-pacific">Coastal Pacific</option>
                 <option value="coffee-for-leaders">Coffee for Leaders</option>
