--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
     <link rel="stylesheet" href="css/calendar.ice-palace.css">
     <link rel="stylesheet" href="css/calendar.iceland-volcanoes.css">
     <link rel="stylesheet" href="css/calendar.imaginary-world.css">
+    <link rel="stylesheet" href="css/calendar.in-my-style.css">
     <link rel="stylesheet" href="css/calendar.inspiration-line.css">
     <link rel="stylesheet" href="css/calendar.in-the-dusk.css">
     <link rel="stylesheet" href="css/calendar.intelligence-quotient.css">
@@ -684,6 +685,7 @@
                 <option value="ice-palace">Ice Palace</option>
                 <option value="iceland-volcanoes">Iceland’s Volcanoes</option>
                 <option value="imaginary-world">Imaginary World</option>
+                <option value="in-my-style">In My Style</option>
                 <option value="inspiration-line">Inspiration Line</option>
                 <option value="in-the-dusk">In the Dusk</option>
                 <option value="intelligence-quotient">Intelligence Quotient</option>
