--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <link rel="stylesheet" href="css/calendar.black-violet.css">
     <link rel="stylesheet" href="css/calendar.blue-bird.css">
     <link rel="stylesheet" href="css/calendar.blue-frost.css">
+    <link rel="stylesheet" href="css/calendar.blue-gold.css">
     <link rel="stylesheet" href="css/calendar.blue-ice.css">
     <link rel="stylesheet" href="css/calendar.blue-mountains.css">
     <link rel="stylesheet" href="css/calendar.blue-ocean.css">
@@ -573,6 +574,7 @@
                 <option value="black-violet">Black Violet</option>
                 <option value="blue-bird">Blue Bird</option>
                 <option value="blue-frost">Blue Frost</option>
+                <option value="blue-gold">Blue & Gold</option>
                 <option value="blue-ice">Blue Ice</option>
                 <option value="blue-mountains">Blue Mountains</option>
                 <option value="blue-ocean">Blue Ocean</option>
