--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
     <link rel="stylesheet" href="css/calendar.grand-prix.css">
     <link rel="stylesheet" href="css/calendar.great-idea.css">
     <link rel="stylesheet" href="css/calendar.great-lakes.css">
-    <link rel="stylesheet" href="css/calendar.great-wall.css">
     <link rel="stylesheet" href="css/calendar.green-city.css">
     <link rel="stylesheet" href="css/calendar.green-coffee.css">
     <link rel="stylesheet" href="css/calendar.greenland-icebergs.css">
@@ -282,6 +281,7 @@
     <link rel="stylesheet" href="css/calendar.technological-might.css">
     <link rel="stylesheet" href="css/calendar.the-dead-sea.css">
     <link rel="stylesheet" href="css/calendar.the-great-silk-road.css">
+    <link rel="stylesheet" href="css/calendar.the-great-wall.css">
     <link rel="stylesheet" href="css/calendar.the-highest-level.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
     <link rel="stylesheet" href="css/calendar.the-perfect-blend.css">
@@ -668,7 +668,6 @@
                 <option value="grand-prix">Grand Prix</option>
                 <option value="great-idea">Great Idea</option>
                 <option value="great-lakes">Great Lakes</option>
-                <option value="great-wall">Great Wall</option>
                 <option value="green-city">Green City</option>
                 <option value="green-coffee">Green Coffee</option>
                 <option value="greenland-icebergs">Greenland’s Icebergs</option>
@@ -799,6 +798,7 @@
                 <option value="technological-might">Technological Might</option>
                 <option value="the-dead-sea">The Dead Sea</option>
                 <option value="the-great-silk-road">The Great Silk Road</option>
+                <option value="the-great-wall">The Great Wall</option>
                 <option value="the-highest-level">The Highest Level</option>
                 <option value="the-last-mohican">The Last Mohican</option>
                 <option value="the-perfect-blend">The Perfect Blend</option>
