--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
     <link rel="stylesheet" href="css/calendar.strawberry-moon.css">
     <link rel="stylesheet" href="css/calendar.success-key.css">
     <link rel="stylesheet" href="css/calendar.success-motivation.css">
+    <link rel="stylesheet" href="css/calendar.success-story.css">
     <link rel="stylesheet" href="css/calendar.sword-of-fate.css">
     <link rel="stylesheet" href="css/calendar.tactical-advantage.css">
     <link rel="stylesheet" href="css/calendar.tactical-command.css">
@@ -792,6 +793,7 @@
                 <option value="strawberry-moon">Strawberry Moon</option>
                 <option value="success-key">Success Key</option>
                 <option value="success-motivation">Success Motivation</option>
+                <option value="success-story">Success Story</option>
                 <option value="sword-of-fate">Sword of Fate</option>
                 <option value="tactical-advantage">Tactical Advantage</option>
                 <option value="tactical-command">Tactical Command</option>
