--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
     <link rel="stylesheet" href="css/calendar.greyscale.css">
     <link rel="stylesheet" href="css/calendar.guangzhou-lights.css">
     <link rel="stylesheet" href="css/calendar.heavy-rain.css">
+    <link rel="stylesheet" href="css/calendar.hidden-paradise.css">
     <link rel="stylesheet" href="css/calendar.hidden-trail.css">
     <link rel="stylesheet" href="css/calendar.high-intelligence.css">
     <link rel="stylesheet" href="css/calendar.high-performance.css">
@@ -677,6 +678,7 @@
                 <option value="greyscale">Greyscale</option>
                 <option value="guangzhou-lights">Guangzhou Lights</option>
                 <option value="heavy-rain">Heavy Rain</option>
+                <option value="hidden-paradise">Hidden Paradise</option>
                 <option value="hidden-trail">Hidden Trail</option>
                 <option value="high-intelligence">High Intelligence</option>
                 <option value="high-performance">High Performance</option>
