--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
     <link rel="stylesheet" href="css/calendar.porcupine-quill.css">
     <link rel="stylesheet" href="css/calendar.port-victoria.css">
     <link rel="stylesheet" href="css/calendar.positive-energy.css">
+    <link rel="stylesheet" href="css/calendar.power-play.css">
     <link rel="stylesheet" href="css/calendar.practical-experience.css">
     <link rel="stylesheet" href="css/calendar.precious-question.css">
     <link rel="stylesheet" href="css/calendar.progressive-decision.css">
@@ -756,6 +757,7 @@
                 <option value="porcupine-quill">Porcupine Quill</option>
                 <option value="port-victoria">Port Victoria</option>
                 <option value="positive-energy">Positive Energy</option>
+                <option value="power-play">Power Play</option>
                 <option value="practical-experience">Practical Experience</option>
                 <option value="precious-question">Precious Question</option>
                 <option value="progressive-decision">Progressive Decision</option>
