--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/calendar.adelaide-skyline.css">
     <link rel="stylesheet" href="css/calendar.adriatic-sea.css">
     <link rel="stylesheet" href="css/calendar.a-forward-move.css">
+    <link rel="stylesheet" href="css/calendar.a-good-idea.css">
     <link rel="stylesheet" href="css/calendar.aloe-vera.css">
     <link rel="stylesheet" href="css/calendar.a-lovely-day.css">
     <link rel="stylesheet" href="css/calendar.alpha-centauri.css">
@@ -547,6 +548,7 @@
                 <option value="adelaide-skyline">Adelaide's Skyline</option>
                 <option value="adriatic-sea">Adriatic Sea</option>
                 <option value="a-forward-move">A Forward Move</option>
+                <option value="a-good-idea">A Good Idea</option>
                 <option value="aloe-vera">Aloe Vera</option>
                 <option value="a-lovely-day">A Lovely Day</option>
                 <option value="alpha-centauri">Alpha Centauri</option>
