--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
     <link rel="stylesheet" href="css/calendar.orange-country.css">
     <link rel="stylesheet" href="css/calendar.orion-constellation.css">
     <link rel="stylesheet" href="css/calendar.overnight-train.css">
+    <link rel="stylesheet" href="css/calendar.pink-lady.css">
     <link rel="stylesheet" href="css/calendar.pink-lake.css">
     <link rel="stylesheet" href="css/calendar.pirate-ship.css">
     <link rel="stylesheet" href="css/calendar.polar-bear.css">
@@ -300,7 +301,6 @@
     <link rel="stylesheet" href="css/calendar.velvety-dark.css">
     <link rel="stylesheet" href="css/calendar.viking-helmet.css">
     <link rel="stylesheet" href="css/calendar.viktoria-falls.css">
-    <link rel="stylesheet" href="css/calendar.wasted-love.css">
     <link rel="stylesheet" href="css/calendar.weekend-downtime.css">
     <link rel="stylesheet" href="css/calendar.white-shark.css">
     <link rel="stylesheet" href="css/calendar.wild-rose.css">
@@ -757,6 +757,7 @@
                 <option value="orange-country">Orange Country</option>
                 <option value="orion-constellation">Orion Constellation</option>
                 <option value="overnight-train">Overnight Train</option>
+                <option value="pink-lady">Pink Lady</option>
                 <option value="pink-lake">Pink Lake</option>
                 <option value="pirate-ship">Pirate Ship</option>
                 <option value="polar-bear">Polar Bear</option>
@@ -825,7 +826,6 @@
                 <option value="velvety-dark">Velvety Dark</option>
                 <option value="viking-helmet">Viking Helmet</option>
                 <option value="viktoria-falls">Viktoria Falls</option>
-                <option value="wasted-love">Wasted Love</option>
                 <option value="weekend-downtime">Weekend Downtime</option>
                 <option value="white-shark">White Shark</option>
                 <option value="wild-rose">Wild Rose</option>
