--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
     <link rel="stylesheet" href="css/calendar.the-great-wall.css">
     <link rel="stylesheet" href="css/calendar.the-highest-level.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
+    <link rel="stylesheet" href="css/calendar.the-modern-developer.css">
     <link rel="stylesheet" href="css/calendar.the-perfect-blend.css">
     <link rel="stylesheet" href="css/calendar.time-complexity.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
@@ -816,6 +817,7 @@
                 <option value="the-great-wall">The Great Wall</option>
                 <option value="the-highest-level">The Highest Level</option>
                 <option value="the-last-mohican">The Last Mohican</option>
+                <option value="the-modern-developer">The Modern Developer</option>
                 <option value="the-perfect-blend">The Perfect Blend</option>
                 <option value="samurai-path">The Samurai's Path</option>
                 <option value="time-complexity">Time Complexity</option>
