--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <link rel="stylesheet" href="css/calendar.crystal-snowfall.css">
     <link rel="stylesheet" href="css/calendar.crystal-stream.css">
     <link rel="stylesheet" href="css/calendar.cyber-pulse.css">
+    <link rel="stylesheet" href="css/calendar.dark-code.css">
     <link rel="stylesheet" href="css/calendar.dark-mode.css">
     <link rel="stylesheet" href="css/calendar.dark-star.css">
     <link rel="stylesheet" href="css/calendar.dartagnans-rapier.css">
@@ -623,6 +624,7 @@
                 <option value="crystal-snowfall">Crystal Snowfall</option>
                 <option value="crystal-stream">Crystal Stream</option>
                 <option value="cyber-pulse">Cyber Pulse</option>
+                <option value="dark-code">Dark Code</option>
                 <option value="dark-mode">Dark Mode</option>
                 <option value="dark-star">Dark Star</option>
                 <option value="dartagnans-rapier">D'Artagnan's Rapier</option>
