--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
     <link rel="stylesheet" href="css/calendar.lavender-bliss.css">
     <link rel="stylesheet" href="css/calendar.lemongrass-sky.css">
+    <link rel="stylesheet" href="css/calendar.level-of-comfort.css">
     <link rel="stylesheet" href="css/calendar.life-quality.css">
     <link rel="stylesheet" href="css/calendar.limited-edition.css">
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
@@ -712,6 +713,7 @@
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="lavender-bliss">Lavender Bliss</option>
                 <option value="lemongrass-sky">Lemongrass Sky</option>
+                <option value="level-of-comfort">Level of Comfort</option>
                 <option value="life-quality">Life Quality</option>
                 <option value="limited-edition">Limited Edition</option>
                 <option value="lions-mane">Lion's Mane</option>
