--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
     <link rel="stylesheet" href="css/calendar.quantum-programmer.css">
     <link rel="stylesheet" href="css/calendar.queen-of-ambience.css">
     <link rel="stylesheet" href="css/calendar.quiet-evening.css">
+    <link rel="stylesheet" href="css/calendar.quiet-progress.css">
     <link rel="stylesheet" href="css/calendar.rainbow-dream.css">
     <link rel="stylesheet" href="css/calendar.rainforest-jungle.css">
     <link rel="stylesheet" href="css/calendar.rain-waltz.css">
@@ -778,6 +779,7 @@
                 <option value="quantum-programmer">Quantum Programmer</option>
                 <option value="queen-of-ambience">Queen of Ambience</option>
                 <option value="quiet-evening">Quiet Evening</option>
+                <option value="quiet-progress">Quiet Progress</option>
                 <option value="rainbow-dream">Rainbow Dream</option>
                 <option value="rainforest-jungle">Rainforest Jungle</option>
                 <option value="rain-waltz">Rain Waltz</option>
