--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
     <link rel="stylesheet" href="css/calendar.time-complexity.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
     <link rel="stylesheet" href="css/calendar.tokyo-at-night.css">
+    <link rel="stylesheet" href="css/calendar.tropical-nature.css">
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
     <link rel="stylesheet" href="css/calendar.urban-fashion.css">
     <link rel="stylesheet" href="css/calendar.velvety-dark.css">
@@ -833,6 +834,7 @@
                 <option value="time-complexity">Time Complexity</option>
                 <option value="time-machine">Time Machine</option>
                 <option value="tokyo-at-night">Tokyo at Night</option>
+                <option value="tropical-nature">Tropical Nature</option>
                 <option value="tropical-sunset">Tropical Sunset</option>
                 <option value="urban-fashion">Urban Fashion</option>
                 <option value="velvety-dark">Velvety Dark</option>
