--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
     <link rel="stylesheet" href="css/calendar.strategic-advantage.css">
     <link rel="stylesheet" href="css/calendar.strategic-planning.css">
     <link rel="stylesheet" href="css/calendar.strawberry-moon.css">
+    <link rel="stylesheet" href="css/calendar.strength-of-spirit.css">
     <link rel="stylesheet" href="css/calendar.success-key.css">
     <link rel="stylesheet" href="css/calendar.success-motivation.css">
     <link rel="stylesheet" href="css/calendar.success-story.css">
@@ -815,6 +816,7 @@
                 <option value="strategic-advantage">Strategic Advantage</option>
                 <option value="strategic-planning">Strategic Planning</option>
                 <option value="strawberry-moon">Strawberry Moon</option>
+                <option value="strength-of-spirit">Strength of Spirit</option>
                 <option value="success-key">Success Key</option>
                 <option value="success-motivation">Success Motivation</option>
                 <option value="success-story">Success Story</option>
