--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
     <link rel="stylesheet" href="css/calendar.tactical-advantage.css">
     <link rel="stylesheet" href="css/calendar.tactical-command.css">
     <link rel="stylesheet" href="css/calendar.technological-might.css">
+    <link rel="stylesheet" href="css/calendar.the-best-of-fashion.css">
     <link rel="stylesheet" href="css/calendar.the-dead-sea.css">
     <link rel="stylesheet" href="css/calendar.the-great-silk-road.css">
     <link rel="stylesheet" href="css/calendar.the-great-wall.css">
@@ -827,6 +828,7 @@
                 <option value="tactical-advantage">Tactical Advantage</option>
                 <option value="tactical-command">Tactical Command</option>
                 <option value="technological-might">Technological Might</option>
+                <option value="the-best-of-fashion">The Best of Fashion</option>
                 <option value="the-dead-sea">The Dead Sea</option>
                 <option value="the-great-silk-road">The Great Silk Road</option>
                 <option value="the-great-wall">The Great Wall</option>
