--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
     <link rel="stylesheet" href="css/calendar.tokyo-at-night.css">
     <link rel="stylesheet" href="css/calendar.tropical-nature.css">
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
+    <link rel="stylesheet" href="css/calendar.unseen-wonders.css">
     <link rel="stylesheet" href="css/calendar.urban-fashion.css">
     <link rel="stylesheet" href="css/calendar.velvety-dark.css">
     <link rel="stylesheet" href="css/calendar.viking-helmet.css">
@@ -842,6 +843,7 @@
                 <option value="tokyo-at-night">Tokyo at Night</option>
                 <option value="tropical-nature">Tropical Nature</option>
                 <option value="tropical-sunset">Tropical Sunset</option>
+                <option value="unseen-wonders">Unseen Wonders</option>
                 <option value="urban-fashion">Urban Fashion</option>
                 <option value="velvety-dark">Velvety Dark</option>
                 <option value="viking-helmet">Viking Helmet</option>
