--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
     <link rel="stylesheet" href="css/calendar.viking-helmet.css">
     <link rel="stylesheet" href="css/calendar.viktoria-falls.css">
     <link rel="stylesheet" href="css/calendar.weekend-downtime.css">
+    <link rel="stylesheet" href="css/calendar.weekend-mindset.css">
     <link rel="stylesheet" href="css/calendar.white-shark.css">
     <link rel="stylesheet" href="css/calendar.wild-rose.css">
     <link rel="stylesheet" href="css/calendar.wild-wonders.css">
@@ -849,6 +850,7 @@
                 <option value="viking-helmet">Viking Helmet</option>
                 <option value="viktoria-falls">Viktoria Falls</option>
                 <option value="weekend-downtime">Weekend Downtime</option>
+                <option value="weekend-mindset">Weekend Mindset</option>
                 <option value="white-shark">White Shark</option>
                 <option value="wild-rose">Wild Rose</option>
                 <option value="wild-wonders">Wild Wonders</option>
