--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
     <link rel="stylesheet" href="css/calendar.orange-country.css">
     <link rel="stylesheet" href="css/calendar.orion-constellation.css">
     <link rel="stylesheet" href="css/calendar.overnight-train.css">
+    <link rel="stylesheet" href="css/calendar.over-the-seven-seas.css">
     <link rel="stylesheet" href="css/calendar.pink-lady.css">
     <link rel="stylesheet" href="css/calendar.pink-lake.css">
     <link rel="stylesheet" href="css/calendar.pirate-ship.css">
@@ -773,6 +774,7 @@
                 <option value="orange-country">Orange Country</option>
                 <option value="orion-constellation">Orion Constellation</option>
                 <option value="overnight-train">Overnight Train</option>
+                <option value="over-the-seven-seas">Over the Seven Seas</option>
                 <option value="pink-lady">Pink Lady</option>
                 <option value="pink-lake">Pink Lake</option>
                 <option value="pirate-ship">Pirate Ship</option>
