--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
     <link rel="stylesheet" href="css/calendar.time-complexity.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
     <link rel="stylesheet" href="css/calendar.tokyo-at-night.css">
+    <link rel="stylesheet" href="css/calendar.tropical-islands.css">
     <link rel="stylesheet" href="css/calendar.tropical-nature.css">
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
     <link rel="stylesheet" href="css/calendar.unseen-wonders.css">
@@ -844,6 +845,7 @@
                 <option value="time-complexity">Time Complexity</option>
                 <option value="time-machine">Time Machine</option>
                 <option value="tokyo-at-night">Tokyo at Night</option>
+                <option value="tropical-islands">Tropical Islands</option>
                 <option value="tropical-nature">Tropical Nature</option>
                 <option value="tropical-sunset">Tropical Sunset</option>
                 <option value="unseen-wonders">Unseen Wonders</option>
