--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
     <link rel="stylesheet" href="css/calendar.weekend-downtime.css">
     <link rel="stylesheet" href="css/calendar.weekend-mindset.css">
     <link rel="stylesheet" href="css/calendar.white-shark.css">
+    <link rel="stylesheet" href="css/calendar.wild-flower.css">
     <link rel="stylesheet" href="css/calendar.wild-rose.css">
     <link rel="stylesheet" href="css/calendar.wild-wonders.css">
     <link rel="stylesheet" href="css/calendar.winter-wonderland.css">
@@ -856,6 +857,7 @@
                 <option value="weekend-downtime">Weekend Downtime</option>
                 <option value="weekend-mindset">Weekend Mindset</option>
                 <option value="white-shark">White Shark</option>
+                <option value="wild-flower">Wild Flower</option>
                 <option value="wild-rose">Wild Rose</option>
                 <option value="wild-wonders">Wild Wonders</option>
                 <option value="winter-wonderland">Winter Wonderland</option>
