--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <link rel="stylesheet" href="css/calendar.cacao-plantation.css">
     <link rel="stylesheet" href="css/calendar.cafe-de-colombia.css">
     <link rel="stylesheet" href="css/calendar.camomile-flowers.css">
+    <link rel="stylesheet" href="css/calendar.canary-islands.css">
     <link rel="stylesheet" href="css/calendar.candy-world.css">
     <link rel="stylesheet" href="css/calendar.cardinals-guards.css">
     <link rel="stylesheet" href="css/calendar.caribbean-sea.css">
@@ -614,6 +615,7 @@
                 <option value="cacao-plantation">Cacao Plantation</option>
                 <option value="cafe-de-colombia">Café de Colombia</option>
                 <option value="camomile-flowers">Camomile Flowers</option>
+                <option value="canary-islands">Canary Islands</option>
                 <option value="candy-world">Candy World</option>
                 <option value="cardinals-guards">Cardinal's Guards</option>
                 <option value="caribbean-sea">Caribbean Sea</option>
