--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="css/calendar.a-lovely-day.css">
     <link rel="stylesheet" href="css/calendar.alpha-centauri.css">
     <link rel="stylesheet" href="css/calendar.alpine-landscape.css">
+    <link rel="stylesheet" href="css/calendar.amazing-opportunity.css">
     <link rel="stylesheet" href="css/calendar.amazon-dolphin.css">
     <link rel="stylesheet" href="css/calendar.amazon-river.css">
     <link rel="stylesheet" href="css/calendar.andromeda-galaxy.css">
@@ -572,6 +573,7 @@
                 <option value="alpha-centauri">Alpha Centauri</option>
                 <option value="alpine-landscape">Alpine Landscape</option>
                 <option value="amazon-dolphin">Amazon Dolphin</option>
+                <option value="amazing-opportunity">Amazing Opportunity</option>
                 <option value="amazon-river">Amazon River</option>
                 <option value="andromeda-galaxy">Andromeda Galaxy</option>
                 <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
